--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/TypeOfService.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/TypeOfService.cshtml
@@ -18,7 +18,22 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <form method="post">
-                <div class="govuk-form-group">
+                @if (!ModelState.IsValid)
+                {
+                    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" data-module="govuk-error-summary">
+                        <h2 class="govuk-error-summary__title" id="error-summary-title">
+                            There is a problem
+                        </h2>
+                        <div class="govuk-error-summary__body">
+                            <ul class="govuk-list govuk-error-summary__list">
+                                <li>
+                                    <a href="#organisation">Please select one option</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                }
+                <div class="govuk-form-group @(!ModelState.IsValid ? "govuk-form-group--error" : "")">
                     <fieldset class="govuk-fieldset">
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                             <h1 class="govuk-fieldset__heading">
