--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/PayForService.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/PayForService.cshtml
@@ -94,6 +94,9 @@
                             </p>
                         }
 
+@*                        <p class="govuk-error-message">
+                            <span class="govuk-visually-hidden">Error:</span><span asp-validation-for="Cost" ></span>
+                        </p>*@
 
                         @*<input asp-for="@Model.StrOrganisationViewModel" type="hidden">*@
 
@@ -111,7 +114,7 @@
                                     </label>
                                     <div class="govuk-input__wrapper">
                                         <div class="govuk-input__prefix" aria-hidden="true">£</div>
-                                        <input id="cost-amount" class="govuk-input govuk-input--width-5" name="Cost" value="@Model.Cost" type="number" spellcheck="false">
+                                        <input asp-for="Cost" class="govuk-input govuk-input--width-5" spellcheck="false"> <!-- (taken this off as it causes non-GDS errors) id="cost-amount"  type="number" name="Cost" value="@Model.Cost" -->
                                     </div>
                                 </div>
                                 <div class="govuk-form-group">
@@ -120,42 +123,15 @@
                                             Amount per
                                         </legend>
                                         <div class="govuk-radios" data-module="govuk-radios">
-                                            <div class="govuk-radios__item">
-                                                <input class="govuk-radios__input" id="cost-unit" type="radio" name="PayUnit" value="Session" @(Model.PayUnit != null && Model.PayUnit == "Hour" ? "checked" : "") />
-                                                <label class="govuk-label govuk-radios__label" for="cost-unit">
-                                                    Hour
-                                                </label>
-                                            </div>
-                                            <div class="govuk-radios__item">
-                                                <input class="govuk-radios__input" id="cost-unit-2" type="radio" name="PayUnit" value="Hour" @(Model.PayUnit != null && Model.PayUnit == "Day" ? "checked" : "") />
-                                                <label class="govuk-label govuk-radios__label" for="cost-unit-2">
-                                                    Day
-                                                </label>
-                                            </div>
-                                            <div class="govuk-radios__item">
-                                                <input class="govuk-radios__input" id="cost-unit-3" type="radio" name="PayUnit" value="Day" @(Model.PayUnit != null && Model.PayUnit == "Week" ? "checked" : "") />
-                                                <label class="govuk-label govuk-radios__label" for="cost-unit-3">
-                                                    Week
-                                                </label>
-                                            </div>
-                                            <div class="govuk-radios__item">
-                                                <input class="govuk-radios__input" id="cost-unit-4" type="radio" name="PayUnit" value="Week" @(Model.PayUnit != null && Model.PayUnit == "Month" ? "checked" : "") />
-                                                <label class="govuk-label govuk-radios__label" for="cost-unit-4">
-                                                    Month
-                                                </label>
-                                            </div>
-                                            <div class="govuk-radios__item">
-                                                <input class="govuk-radios__input" id="cost-unit-5" type="radio" name="PayUnit" value="Course" @(Model.PayUnit != null && Model.PayUnit == "Course" ? "checked" : "") />
-                                                <label class="govuk-label govuk-radios__label" for="cost-unit-5">
-                                                    Course
-                                                </label>
-                                            </div>
-                                            <div class="govuk-radios__item">
-                                                <input class="govuk-radios__input" id="cost-unit-6" type="radio" name="PayUnit" value="Course" @(Model.PayUnit != null && Model.PayUnit == "Session" ? "checked" : "") />
-                                                <label class="govuk-label govuk-radios__label" for="cost-unit-6">
-                                                    Session
-                                                </label>
-                                            </div>
+                                            @foreach (var unit in Model.PayUnitValues)
+                                            {
+                                                <div class="govuk-radios__item">
+                                                    <input asp-for="PayUnit" class="govuk-radios__input" id="cost-unit" type="radio" value="@unit" /> <!--name="PayUnit" (Model.PayUnit != null && Model.PayUnit == "Hour" ? "checked" : "")-->
+                                                    <label class="govuk-label govuk-radios__label" for="cost-unit">
+                                                        @unit
+                                                    </label>
+                                                </div>
+                                            }
                                         </div>
 
                                     </fieldset>
