--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
@@ -45,7 +45,7 @@
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
-                            Support offered
+                            What does it help with?
                         </dt>
                         <dd class="govuk-summary-list__value">
                             @for (int i = 0; i < Model.SelectedTaxonomy.Count(); i++)
@@ -67,7 +67,7 @@
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
-                            How the support takes place
+                            How can families use it?
                         </dt>
                         <dd class="govuk-summary-list__value">
                             @for (int i = 0; i < Model.ServiceDeliverySelection.Count(); i++)
@@ -87,33 +87,32 @@
                             </a>
                         </dd>
                     </div>
-                    <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Where the in person support takes place
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            @for (int i = 0; i < Model.OrganisationViewModel?.InPersonSelection?.Count(); i++)
-                            {
-                                @if (i > 0)
-                                {
-                                    <span>&#44;</span>
-                                }
-                                @Model.OrganisationViewModel?.InPersonSelection?[i]
-                            }
-                        </dd>
-                        <dd class="govuk-summary-list__actions">
-                            @*<a class="govuk-link" asp-page="/OrganisationAdmin/InPersonWhere" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
-                            <a class="govuk-link" asp-page="/OrganisationAdmin/InPersonWhere">
-                                Change<span class="govuk-visually-hidden"> location</span>
-                            </a>
-                        </dd>
-                    </div>
+                    @*<div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                    Where the in person support takes place
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                    @for (int i = 0; i < Model.OrganisationViewModel?.InPersonSelection?.Count(); i++)
+                    {
+                    @if (i > 0)
+                    {
+                    <span>&#44;</span>
+                    }
+                    @Model.OrganisationViewModel?.InPersonSelection?[i]
+                    }
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link" asp-page="/OrganisationAdmin/InPersonWhere">
+                    Change<span class="govuk-visually-hidden"> location</span>
+                    </a>
+                    </dd>
+                    </div>*@
 
                     @if (@Model.OrganisationViewModel?.InPersonSelection?.Contains("Our own location") == true)
                     {
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Address of own location
+                                Address
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 @Model.OrganisationViewModel.Address_1<br />
@@ -130,46 +129,73 @@
                         </div>
                     }
 
+                    @if (@Model.OrganisationViewModel?.Familychoice == "Yes")
+                    {
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Can families choose location?
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                @Model.OrganisationViewModel.Familychoice
+                            </dd>
+                            <dd class="govuk-summary-list__actions">
+                                <a class="govuk-link" asp-page="/OrganisationAdmin/OfferAtFamiliesPlace">
+                                    Change<span class="govuk-visually-hidden">family choice</span>
+                                </a>
+                            </dd>
+                        </div>
+                    }
+
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
-                            Who the service is for
+                            For children and young people?
                         </dt>
-                        <dd class="govuk-summary-list__value" id="test">
+
+                        @if (Model.OrganisationViewModel.WhoForSelection != null && Model.OrganisationViewModel.WhoForSelection.Any())
+                        {
                             @for (int i = 0; i < Model.OrganisationViewModel?.WhoForSelection?.Count(); i++)
                             {
                                 @if (i > 0)
                                 {
                                     <span>&#44;&nbsp</span>
                                 }
+                                <dd class="govuk-summary-list__value" id="test">
+                                    Yes - @Model?.OrganisationViewModel?.MinAge years old to @Model?.OrganisationViewModel?.MaxAge years old
+                                </dd>
 
-                                @Model.OrganisationViewModel?.WhoForSelection?[i]
                             }
-                        </dd>
+
+                        }
+                        else
+                        {
+                            <dd class="govuk-summary-list__value" id="test">
+                                No
+                            </dd>
+                        }
+
                         <dd class="govuk-summary-list__actions">
-                            @*<a class="govuk-link" asp-page="/OrganisationAdmin/WhoFor" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
                             <a class="govuk-link" asp-page="/OrganisationAdmin/WhoFor">
                                 Change<span class="govuk-visually-hidden">type</span>
                             </a>
                         </dd>
                     </div>
 
-                    @if (@Model.OrganisationViewModel?.WhoForSelection?.Contains("Children") == true)
+                    @* @if (@Model.OrganisationViewModel?.WhoForSelection?.Contains("Children") == true)
                     {
-                        <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Age of children and young people
-                            </dt>
-                            <dd class="govuk-summary-list__value" id="test">
-                                @Model?.OrganisationViewModel?.MinAge to @Model?.OrganisationViewModel?.MaxAge
-                            </dd>
-                            <dd class="govuk-summary-list__actions">
-                                @*<a class="govuk-link" asp-page="/OrganisationAdmin/WhoFor" asp-route-strOrganisationViewModel="@Model?.StrOrganisationViewModel">*@
-                                <a class="govuk-link" asp-page="/OrganisationAdmin/WhoFor">
-                                    Change<span class="govuk-visually-hidden">type</span>
-                                </a>
-                            </dd>
-                        </div>
-                    }
+                    <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                    Age of children and young people
+                    </dt>
+                    <dd class="govuk-summary-list__value" id="test">
+                    @Model?.OrganisationViewModel?.MinAge to @Model?.OrganisationViewModel?.MaxAge
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link" asp-page="/OrganisationAdmin/WhoFor">
+                    Change<span class="govuk-visually-hidden">type</span>
+                    </a>
+                    </dd>
+                    </div>
+                    }*@
 
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
@@ -199,13 +225,11 @@
                         <dd class="govuk-summary-list__value">
                             @if (@Model?.OrganisationViewModel?.IsPayedFor?.Equals("Yes") == true)
                             {
-                                <span>£</span>
-
-                                @Model?.OrganisationViewModel?.Cost <span>per</span> @Model?.OrganisationViewModel?.PayUnit
+                                <span>Yes - £</span> @Model?.OrganisationViewModel?.Cost <span>per</span> @Model?.OrganisationViewModel?.PayUnit
                             }
                             else
                             {
-                                <span>No, it is free</span>
+                                <span>No</span>
                             }
                         </dd>
                         <dd class="govuk-summary-list__actions">
@@ -286,7 +310,7 @@
                             Back to manage your services
                         </a>
                     </p>
-                    
+
                 }
 
             </fieldset>
