--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ViewServices.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ViewServices.cshtml
@@ -26,17 +26,17 @@
                     </tr>
                 </thead>
                 <tbody class="govuk-table__body">
-                    @foreach (var item in @Model.Services)
-                    {
+                    @for (int i = 0; i < @Model.Services.Count; i++)
+                     {
+                        var item = @Model.Services[i];
                         <tr class="govuk-table__row">
                             <td class="govuk-table__cell">@item.Name</td>
                             <td class="govuk-table__cell" style="text-align: right">
-                                <a asp-page-handler="RedirectToDetailsPage" asp-route-orgId="@Model.OrganisationViewModel.Id.ToString()" asp-route-serviceid="@item.Id" class="govuk-!-margin-right-1">View</a>
-                                <a asp-page="/OrganisationAdmin/DeleteService" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" class="govuk-!-margin-right-0">Delete</a>
+                                <a asp-page-handler="RedirectToDetailsPage" asp-route-orgId="@Model.OrganisationViewModel.Id.ToString()" asp-route-serviceid="@item.Id" class="govuk-!-margin-right-1" data-testid="view-service@(i)">View</a>
+                                <a asp-page="/OrganisationAdmin/DeleteService" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" class="govuk-!-margin-right-0" data-testid="delete-service@(i)">Delete</a>
                             </td>
                         </tr>
                     }
-
                 </tbody>
             </table>
         </div>
