Added cypress data-testid

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
@@ -324,7 +324,7 @@
                     }
                     else
                     {
-                        <button type="submit" class="govuk-button">
+                        <button type="submit" class="govuk-button" data-testid="button-confirm">
                             Confirm details
                         </button>
                     }
