--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/OfferAtFamiliesPlace.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/OfferAtFamiliesPlace.cshtml
@@ -45,13 +45,13 @@
                         }
                         <div class="govuk-radios" data-module="govuk-radios">
                             <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="Familychoice" name="Familychoice" type="radio" value="Yes">
+                                <input class="govuk-radios__input" id="Familychoice" name="Familychoice" type="radio" value="Yes" data-testid="yes-select">
                                 <label class="govuk-label govuk-radios__label" for="Familychoice">
                                     Yes, they can choose where
                                 </label>
                             </div>
                             <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="Familychoice2" name="Familychoice" type="radio" value="No">
+                                <input class="govuk-radios__input" id="Familychoice2" name="Familychoice" type="radio" value="No" data-testid="no-select">
                                 <label class="govuk-label govuk-radios__label" for="Familychoice2">
                                     No, they cannot choose where
                                 </label>
@@ -59,7 +59,7 @@
                         </div>
                     </fieldset>
                 </div>
-                <button class="govuk-button">
+                <button class="govuk-button" data-testid="button-continue">
                     Continue
                 </button>
             </form>
